infrastructure/longhorn/longhorn-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-internal
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16,10.0.0.0/8"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx-public
  rules:
    - http:
        paths:
          - path: /longhorn(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
